[package]

name = "conduit-git-http-backend"
version = "0.9.0-alpha.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["conduit"]
repository = "https://github.com/conduit-rust/conduit-git-http-backend"
homepage = "https://github.com/conduit-rust/conduit-git-http-backend"
description = """
Conduit handler for running `git http-backend` and serving up a git repository.
"""

[dependencies]
conduit = "0.9.0-alpha.5"
flate2 = "1"
