[package]

name = "conduit-git-http-backend"
version = "0.10.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["conduit"]
repository = "https://github.com/conduit-rust/conduit-git-http-backend"
homepage = "https://github.com/conduit-rust/conduit-git-http-backend"
description = """
Conduit handler for running `git http-backend` and serving up a git repository.
"""
edition = "2018"
rust-version = "1.46.0"

[dependencies]
conduit = "0.10.0"
flate2 = "1"
